--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-svg": "^16.1.34",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
